# file_upload_for_share

./: .gitignore  Cargo.toml  Config.example.toml  README.md  README.ru.md  build.rs
src/: err_log.rs  main.rs  send_file.rs
