[package]
name = "upload_to_server"
version = "0.1.0"
edition = "2021"

[dependencies]
ssh2 = "*"
clipboard = "*"
notify-rust = "*"
winreg = "*"
chrono = "*"
serde = { version = "1.0", features = ["derive"] }
config = "*"
toml = "*"
base64 = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
toml = "*"